# linearMpcHumanoid

./: .gitignore  CMakeLists.txt  README.md  linearMpcHumanoid.md
apps/mujoco/: main.cpp
apps/offline/: main.cpp
include/controller/: Clock.hpp  Dynamics.hpp  Robot.hpp  controller.hpp  dynamics.hpp  footRefTrajectory.hpp  generalizedFunctions.hpp  invKinematics.hpp  linkInertia.hpp  mpcLinearPendulum.hpp  optimizationInfo.hpp  rk4.hpp  robotInfo.hpp  robotParameters.hpp  zmpGeneration.hpp
include/linearMpcHumanoid/controller/: Dynamics.hpp  controller.hpp  invKinematics.hpp  mpcLinearPendulum.hpp
include/linearMpcHumanoid/general/: Clock.hpp  Task.hpp  generalizedFunctions.hpp
include/linearMpcHumanoid/robotInfo/: Robot.hpp  robotParameters.hpp
include/linearMpcHumanoid/trajectories/: footRefTrajectory.hpp  zmpGeneration.hpp
include/simulators/: MujocoSim.hpp  MujocoViewer.hpp
models/: nao.xml
simulators/mujoco/: MujocoSim.cpp  MujocoViewer.cpp
simulators/offline/: main.cpp
src/: Clock.cpp  Dynamics.cpp  Robot.cpp  controller.cpp  dynamics.cpp  footRefTrajectory.cpp  generalizedFunctions.cpp  invKinematics.cpp  mpcLinearPendulum.cpp  robotInfo.cpp  robotParameters.cpp  zmpGeneration.cpp
tests/: main.cpp
